--- a/src/status.html
+++ b/src/status.html
@@ -45,6 +45,7 @@
 			.section .title .page-count {color:#666; font-weight:normal;}
 			.section .content {display:none;}
 			.section:last-child{margin-bottom:100px;}
+			.througt{text-decoration-line:line-through}
 		</style>
 		<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 		<script type="text/javascript">
@@ -366,28 +367,28 @@
 						<tr>
 							<td></td>
 							<td></td>
-							<td>결제수단</td>
+							<td class="througt">결제수단</td>
 							<td></td>
 							<td></td>
 							<td></td>
 							<td>/reservation</td>
-							<td><a target="_blank" href="html/reservation/SCR_GA_RV_0209_M01.html">SCR_GA_RV_0209_M01.html</a></td>
+							<td><a class="througt" target="_blank" href="html/reservation/SCR_GA_RV_0209_M01.html">SCR_GA_RV_0209_M01.html</a></td>
 							<td class="stat"></td>
 							<td class="date"></td>
-							<td></td>
+							<td>삭제</td>
 						</tr>
 						<tr>
 							<td></td>
 							<td></td>
-							<td>대여예약 약관동의</td>
+							<td class="througt">대여예약 약관동의</td>
 							<td></td>
 							<td></td>
 							<td></td>
 							<td>/reservation</td>
-							<td><a target="_blank" href="html/reservation/SCR_GA_RV_0210_M01.html">SCR_GA_RV_0210_M01.html</a></td>
+							<td><a class="througt" target="_blank" href="html/reservation/SCR_GA_RV_0210_M01.html">SCR_GA_RV_0210_M01.html</a></td>
 							<td class="stat"></td>
 							<td class="date"></td>
-							<td></td>
+							<td>삭제</td>
 						</tr>
 						<tr>
 							<td></td>
