예약전 주의사항

--- a/src/html/reservation/SCR_GA_RV_0211_M01.html
+++ b/src/html/reservation/SCR_GA_RV_0211_M01.html
@@ -6,7 +6,7 @@
     <body>
         <div id="wrap">
             <!-- header -->
-            @@include('@@webRoot/include/header.html', { type: "sub_02", title: "보험료 안내" })
+            @@include('@@webRoot/include/header.html', { type: "sub_02", title: "예약 전 주의사항" })
             <!-- //header -->
 
             <!-- container -->
@@ -16,15 +16,10 @@
                         <section>
                             <h2>주요 페널티 안내</h2>
                             <p>회원 영구정지 및 페널티 20만원+발생 실비 청구</p>
-                            <h3>자동차종합보험</h3>
                             <ul class="list">
                                 <li>차량내 흡연, 반려동물 캐리어 미탑승 적발</li>
                                 <li>제3자 및 동반 운전자 단독 운행</li>
                                 <li>대여기간 내 자동차 사고/파손 미신고</li>
-                            </ul>
-                            <h3>자차면책보험료</h3>
-                            <ul class="list">
-                                <li>사고 1건당 자차면책보험료 5만원 또는 30만원 또는 70만원 중 선택 가능 (보험료 차등 할인)</li>
                             </ul>
                         </section>
                         <hr class="divider" />
