--- a/src/status.html
+++ b/src/status.html
@@ -398,7 +398,7 @@
 							<td></td>
 							<td></td>
 							<td>/reservation</td>
-							<td><a target="_blank" href="html/reservation/SCR_GA_RV_0211_M01.html">SCR_GA_RV_0211_M01.html</a></td>
+							<td><a target="_blank" href="components/popup_module.html#reservation#SCR_GA_RV_0211_M01#full">SCR_GA_RV_0211_M01.html</a></td>
 							<td class="stat"></td>
 							<td class="date"></td>
 							<td></td>
