--- a/src/html/reservation/SCR_GA_RV_0213_M01.html
+++ b/src/html/reservation/SCR_GA_RV_0213_M01.html
@@ -24,7 +24,7 @@
 <div class="layer-footer">
 	<div class="btn-wrap">
 		<div class="btn-group">
-			<button type="button" class="btn secondary md">아니오</button>
+			<button type="button" class="btn cancel md">아니오</button>
 			<button type="button" class="btn md">예약하기</button>
 		</div>
 	</div>
