--- a/src/status.html
+++ b/src/status.html
@@ -329,11 +329,37 @@
 							<td></td>
 							<td></td>
 							<td></td>
+							<td></td>
+							<td></td>
+							<td></td>
+							<td>/reservation</td>
+							<td><a target="_blank" href="html/reservation/SCR_GA_RV_0206_T02_1.html">SCR_GA_RV_0206_T02_1.html</a></td>
+							<td class="stat"></td>
+							<td class="date"></td>
+							<td></td>
+						</tr>
+						<tr>
+							<td></td>
+							<td></td>
+							<td></td>
 							<td>T멤버십</td>
 							<td></td>
 							<td></td>
 							<td>/reservation</td>
 							<td><a target="_blank" href="html/reservation/SCR_GA_RV_0206_T03.html">SCR_GA_RV_0206_T03.html</a></td>
+							<td class="stat"></td>
+							<td class="date"></td>
+							<td></td>
+						</tr>
+						<tr>
+							<td></td>
+							<td></td>
+							<td></td>
+							<td></td>
+							<td></td>
+							<td></td>
+							<td>/reservation</td>
+							<td><a target="_blank" href="html/reservation/SCR_GA_RV_0206_T03_1.html">SCR_GA_RV_0206_T03_1.html</a></td>
 							<td class="stat"></td>
 							<td class="date"></td>
 							<td></td>
