list - sm사이즈 추가

--- a/src/html/reservation/SCR_GA_RV_0206_T02.html
+++ b/src/html/reservation/SCR_GA_RV_0206_T02.html
@@ -35,7 +35,7 @@
                                 <h3 class="section-title">할인</h3>
                                 <div class="section-cont">
                                     <h4>최대 1만원/ 주 1회 할인적용</h4>
-                                    <ul class="list">
+                                    <ul class="list sm">
                                         <li>주중 대여요금의 20% 할인</li>
                                         <li>주말/공휴일 대여요금의 10% 할인</li>
                                     </ul>
