--- a/src/html/reservation/SCR_GA_RV_0206_T03.html
+++ b/src/html/reservation/SCR_GA_RV_0206_T03.html
@@ -38,7 +38,7 @@
                                 <h3 class="section-tit">할인형</h3>
                                 <div class="section-cont">
                                     <h4>최대 월 4회(1일~말일 기준), 회당 최대 1만원 할인</h4>
-                                    <ul class="list">
+                                    <ul class="list sm">
                                         <li>주중 대여요금의 20% 할인</li>
                                         <li>주말/공휴일 대여요금의 10% 할인</li>
                                         <li>Lite 등급의 경우 할인 불가</li>
@@ -50,7 +50,7 @@
                                 <h3 class="section-tit">적립형</h3>
                                 <div class="section-cont">
                                     <h4>최대 월 4회(1일~말일 기준), 회당 최대 1만원 적립</h4>
-                                    <ul class="list">
+                                    <ul class="list sm">
                                         <li>주중 대여요금의 20% 할인</li>
                                         <li>주말/공휴일 대여요금의 10% 할인</li>
                                         <li>Lite 등급의 경우 할인 불가</li>
