--- a/src/html/reservation/SCR_GA_RV_0206_T03_2.html
+++ b/src/html/reservation/SCR_GA_RV_0206_T03_2.html
@@ -61,7 +61,7 @@
                                 <h3 class="section-tit">LITE 등급</h3>
                                 <div class="section-cont">
                                     <h4>할인 및 적립이 불가능하며 , T+포인트 사용만 가능</h4>
-                                    <ul class="list">
+                                    <ul class="list sm">
                                         <li>최초 T멤버십 사용 시 T멤버십 앱에서 비밀번호를 설정 후 사용 가능합니다.</li>
                                         <li>비밀번호 불일치 일 5회, 누적 10회일 경우, T멤버십 앱에서 재인증 후 다시 입력해야 합니다.</li>
                                         <li>T멤버십 (할인 ↔ 적립) 혜택 변경은 T멤버십 앱에서 변경하실 수 있습니다.</li>
