--- a/src/status.html
+++ b/src/status.html
@@ -399,7 +399,7 @@
 							<td></td>
 							<td>/reservation</td>
 							<td><a target="_blank" href="components/popup_module.html#reservation#SCR_GA_RV_0211_M01#full">SCR_GA_RV_0211_M01.html</a></td>
-							<td class="stat"></td>
+							<td class="stat">⚪</td>
 							<td class="date"></td>
 							<td></td>
 						</tr>
