차량예약 > 예약하기 > L.POINT    --  작업 중

--- a/src/html/reservation/SCR_GA_RV_0206_T03_1.html
+++ b/src/html/reservation/SCR_GA_RV_0206_T03_1.html
@@ -91,7 +91,7 @@
                         </div>
                     </div>
                 </div>
-                @@include('@@webRoot/include/bot_fix.html', {type: "type01"})
+                @@include('@@webRoot/include/bot_fix.html', {type: "type01", title:"적용하기"})
             </section>
             <!-- //container -->
         </div>
