--- a/src/status.html
+++ b/src/status.html
@@ -380,6 +380,19 @@
 						<tr>
 							<td></td>
 							<td></td>
+							<td></td>
+							<td></td>
+							<td></td>
+							<td></td>
+							<td>/reservation</td>
+							<td><a target="_blank" href="html/reservation/SCR_GA_RV_0207_M01_1.html">SCR_GA_RV_0207_M01_1.html</a></td>
+							<td class="stat"></td>
+							<td class="date"></td>
+							<td></td>
+						</tr>
+						<tr>
+							<td></td>
+							<td></td>
 							<td>보험료 안내</td>
 							<td></td>
 							<td></td>
