--- a/src/html/reservation/SCR_GA_RV_0206_T02_1.html
+++ b/src/html/reservation/SCR_GA_RV_0206_T02_1.html
@@ -56,7 +56,7 @@
                         </div>
                     </div>
                 </div>
-                @@include('@@webRoot/include/bot_fix.html', {type: "type01"})
+                @@include('@@webRoot/include/bot_fix.html', {type: "type01", title:"적용하기"})
             </section>
             <!-- //container -->
         </div>
