차량예약 > 예약하기 > 할인/적립 > 쿠폰    --  수정 중

--- a/src/html/reservation/SCR_GA_RV_0206_T01.html
+++ b/src/html/reservation/SCR_GA_RV_0206_T01.html
@@ -37,7 +37,14 @@
                             </section>
                             <hr class="divider" />
                             <section class="section">
-                                <h3 class="section-title">사용 가능한 쿠폰<span class="badge-num">5</span></h3>
+                                <div class="section-title">
+                                    <h3>사용 가능한 쿠폰<span class="badge-num">5</span></h3>
+                                    <div class="filter">
+                                        <a href="#" class="active">혜택순</a>
+                                        <hr class="divider-v">
+                                        <a href="#">마감순</a>
+                                    </div>
+                                </div>
                                 <div class="section-cont">
                                     <div class="coupon-list">
                                         <div class="coupon-item">
@@ -58,13 +65,13 @@
                                                 <span>2,000원 할인</span>
                                                 <span>-2,000원</span>
                                             </div>
-                                            <p>[매일] 월화수목금토일 언제나 50% 할인</p>
+                                            <p>금연 서약한 당신을 위해!</p>
                                             <div class="effective-date">
                                                 <span class="date">2022.04.01 ~ 2022.04.30</span>
                                                 <span class="badge normal sm">D-35</span>
                                             </div>
                                         </div>
-                                        <div class="coupon-item">
+                                        <div class="coupon-item expired">
                                             <div class="discount-type">비율할인</div>
                                             <div class="discount-value">
                                                 <span>50% 할인</span>
@@ -85,15 +92,15 @@
                                             <p>[매일] 월화수목금토일 언제나 50% 할인</p>
                                             <div class="effective-date">
                                                 <span class="date">2022.04.01 ~ 2022.04.30</span>
-                                                <span class="badge warning sm">D-7</span>
+                                                <span class="badge normal sm">D-365</span>
                                             </div>
                                         </div>
                                     </div>
                                 </div>
-                                <button class="btn-filter">
+                                <!-- <button class="btn-filter">
                                     <i class="ico filter md"></i>
                                     <span class="text">혜택순</span>
-                                </button>
+                                </button> -->
                             </section>
                         </div>
                     </div>
