--- a/src/html/reservation/SCR_GA_RV_0207_M01.html
+++ b/src/html/reservation/SCR_GA_RV_0207_M01.html
@@ -26,13 +26,13 @@
                                   <label for="card_number">카드번호</label>  
                                   <!-- <input id="card_number" class="form-control" required="" pattern="(\d{4}\s?){4}" placeholder="•••• •••• •••• ••••" maxlength="19"> -->
                                   <div class="card-input">
-                                    <input type="text" data-pos="1" placeholder="1234" value="1234">
+                                    <input type="text" data-pos="1" placeholder="1234" value="1234" maxlength='4'>
                                     <span class="dash active">-</span>
-                                    <input type="text" data-pos="2" placeholder="5678">
+                                    <input type="text" data-pos="2" placeholder="5678" maxlength='4'>
                                     <span class="dash">-</span>
-                                    <input type="text" data-pos="3" placeholder="1234">
+                                    <input type="text" data-pos="3" placeholder="1234" maxlength='4'>
                                     <span class="dash">-</span>
-                                    <input type="text" data-pos="4" placeholder="5678">
+                                    <input type="text" data-pos="4" placeholder="5678" maxlength='4'>
                                 </div>
                                 </div>
                             </div>
