차량예약 > 예약하기 > 보험료 안내 -- 작업 완료

--- a/src/html/reservation/SCR_GA_RV_0211_M01.html
+++ b/src/html/reservation/SCR_GA_RV_0211_M01.html
@@ -2,13 +2,13 @@
 	<!-- 프리존 반납이란? -->
 	@@include('@@webRoot/include/header.html', {
 		type: "sub_pop",
-		title: "보험료 안내"
+		title: "예약 전 주의사항"
 	})
 </div>
 
 <div class="layer-body">
 	<div class="reservation">
-		<section>
+		<section class="pb0">
 			<h2>주요 페널티 안내</h2>
 			<p>회원 영구정지 및 페널티 20만원+발생 실비 청구</p>
 			<h3>자동차종합보험</h3>
@@ -33,7 +33,7 @@
 
 		</section>
 		<hr class="divider" />
-		<section>
+		<section class="pb0">
 			<h2>취소 수수료 안내</h2>
 			<p>취소 시점에 따라 수수료가 부과될 수 있습니다.</p>
 
