--- a/src/status.html
+++ b/src/status.html
@@ -380,7 +380,7 @@
 						<tr>
 							<td></td>
 							<td></td>
-							<td></td>
+							<td>L.POINT</td>
 							<td></td>
 							<td></td>
 							<td></td>
@@ -398,8 +398,8 @@
 							<td></td>
 							<td></td>
 							<td>/reservation</td>
-							<td><a target="_blank" href="html/reservation/SCR_GA_RV_0208_M01.html">SCR_GA_RV_0208_M01.html</a></td>
-							<td class="stat"></td>
+							<td><a target="_blank" href="components/popup_module.html#reservation#SCR_GA_RV_0208_M01#full">SCR_GA_RV_0208_M01.html</a></td>
+							<td class="stat">⚪</td>
 							<td class="date"></td>
 							<td></td>
 						</tr>
