--- a/src/html/reservation/SCR_GA_RV_0213_M01.html
+++ b/src/html/reservation/SCR_GA_RV_0213_M01.html
@@ -1,6 +1,6 @@
 <div class="layer-header">
 	<h5 class="title">예약결제 안내</h5>
-	<button type="button" class="layer-close" >닫기</button>
+	<!-- <button type="button" class="layer-close" >닫기</button> -->
 </div>
 <div class="layer-body">
 	<p>차량예약 및 요금결제를 진행하시겠습니까?</p>
